--- a/index.html
+++ b/index.html
@@ -13,5 +13,79 @@
 
 <body>
 <!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <nav>
+    <a href="services.html">Services</a>
+    <a href="#">Product</a>
+    <a href="#">Vision</a>
+    <a href="#">Features</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+    <a href="#"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo." /></a>
+  </nav>
+
+  <header>
+    <div class="header-div">
+      <h2 class="main-heading">Innovation<br> On<br> Demand</h2>
+      <div class="header-btn"><p>Get Started</p></div>
+    </div>
+    <div class="header-img">
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </div>
+  </header>
+
+  <section class="top-content-section">
+    <div class="top-content-contain">
+      <div class="top-content-features">
+        <h3 class="features-h3">Features</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+
+      <div class="top-content-about">
+        <h3 class="about-h3">About</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </div>
+  </section>
+
+  <div class="top-content-img">
+      <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  </div>
+
+  <section class="bottom-content-section">
+    <div class="bottom-content-contain">
+      <div class="bottom-content-services">
+        <h3>Services</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+
+      <div class="bottom-content-product">
+        <h3>Product</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+
+      <div class="bottom-content-vision">
+        <h3>Vision</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </div>
+  </section>
+  
+
+  
+  <div class="contact-contain">
+    <h3>Contact</h3>
+    <address>
+      <p>123 Way 456 Street<br>
+      Somewhere, USA</p><br>
+      <p>1 (888) 888-8888</p><br>
+      <p>sales@greatidea.io</p><br>
+    </address>
+  </div>
+  
+
+  <footer>
+    <p>Copyright Great Idea! 2018</p>
+  </footer>
+
 </body>
 </html>
